--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ ImageHash==4.2.1
 jinja2==2.10
 more-itertools==2.3
 Pillow==5.2
-pymongo>=3.6.0
-python-magic==0.4.14
+pymongo==3.6.0
+python-magic-bin==0.4.14
 termcolor==1.1.0
 Werkzeug==0.14.1
 Flask-Cors==3.0.3
